{
    "name": "Player Controls",
    "maps": [
        {
            "name": "PlayerTouchActions",
            "id": "f503be55-d7c4-4f3b-8485-1a2a14cdf38c",
            "actions": [
                {
                    "name": "TouchMovement",
                    "type": "Value",
                    "id": "af2ea9b7-da2c-4fab-9112-49869ce86624",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "afc2ccfb-97c4-44bc-ae6c-1576edbc79d6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3930aac-39e3-4816-965c-ac37b60f09ee",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "931abf17-1ab3-49bf-ae1f-021310b9d84e",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}